--- a/requirements.txt
+++ b/requirements.txt
@@ -72,9 +72,12 @@ packaging==24.0
 pandas==2.2.1
 pandocfilters==1.5.1
 parso==0.8.3
+patsy==0.5.6
 phik==0.12.4
 pillow==10.2.0
 platformdirs==4.2.0
+plotly==5.21.0
+plotly-express==0.4.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
@@ -107,6 +110,8 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
+statsmodels==0.14.2
+tenacity==8.2.3
 terminado==0.18.1
 threadpoolctl==3.4.0
 tinycss2==1.2.1
